Release Note

* 8/22/2014
  * fixed TC to delete only existing params for incexec

* 8/21/2014
  * adding All to email notification when all input succeeded
  * updating nFiles of output/log/lib datasets when the task is done

* 8/20/2014
  * added protection against large --nGBPerJob
  * fixed JG to use MB in maxDiskCount
  * fixed JG not to include input size in maxDiskCount for remoteIO sites
  * fixed retryTask for task with multiple inputs

* 8/19/2014
  * reduced cutoff to 15 for selection of WAN access sites
  * updating task when incexec

* 8/18/2014
  * introduced fairshare in tobeProcessed
  * allowing retry for maxAttempt<=attemptNr
  * fixed JG to register all output datasets 

* 8/17/2014
  * fixed PP to check only master inputs
  * sending task view in notification
  * setting retry in history
  * added safety mergin in workDiskCoung
  * fixed getScoutData
  * fixed AtlasAnalJB to correctly use scout data

* 8/16/2014
  * locking task in JG
  * fixed for xmlConfig

* 8/15/2014
  * fixed for loadXML
  * fixed for retry
  * fixed incexec to use comm_parameters
  * changed AtlasProdPP to freeze output and log datasets
  * decreased limit for instance renewal in Interaction

* 8/14/2014
  * changed to allow reactivation of aborted tasks 
  * changed some method to avoid row contention
  * fixed AtlasDDM for sites which share the same DDM endpoints 

* 8/13/2014
  * removed delay after scouts
  * fixed AtlasAnalJB for nThrottle
  * changed to lock tasks before prepare or process
  * added more debug info to AtlasAnalJB
  * removing currentPrrio limit when counting jobs in AtlasAnalJB

* 8/12/2014
  * fixed file rescue for pseudo input
  * improved performance of getTasksToBeProcessed
  * fixed TaskRefinerBase for GRL
  * fixed file rescue for orphaned merging
  * added lock against multiple processing
  * using tobroken in JG

* 8/11/2014
  * fixed AtlasAnalJB for remote access sites

* 8/6/2014
  * fixed JG for ES jobs to have temporary log file names
